--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,18 @@
   <title>Document</title>
   <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
+<body class="text-gray-600">
   
   <div><!-- content wrapper -->
     <div>
       <nav>
         <div>
-          <h1>
-            <a href="/">Food Ninja</a>
+          <h1 class="font-bold uppercase p-4 border-b border-gray-100">
+            <a href="/">Foogrammer</a>
           </h1>
         </div>
         <ul>
-          <li>
+          <li class="text-gray-700 font-bold">
             <a href="#">
               <span>Home</span>
             </a>
@@ -35,24 +35,24 @@
       </nav>
     </div><!-- end nav -->
 
-    <main>
+    <main class="px-16 py-6">
       <div>
         <a href="#">Login</a>
         <a href="#">Sign up</a>
       </div>
 
       <header>
-        <h2>Recipes</h2>
-        <h3>For Programmers!</h3>
+        <h2 class="text-gray-500 text-6xl font-semibold">Recipes</h2>
+        <h3 class="text-2xl font-semibold">For Programmers!</h3>
       </header>
 
       <div>
-        <h4>Latest Recipes</h4>
+        <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Recipes</h4>
 
-        <div>
+        <div class="mt-8">
           <!-- cards go here -->
           <div>
-            <img src="" alt="">
+            <img src="./img/stew.jpg" alt="stew">
             <div>
               <span>5 Bean Chilli Stew</span>
               <span>Recipe by Mario</span>
@@ -60,9 +60,9 @@
           </div>
         </div>
 
-        <h4>Most Popular</h4>
+        <h4 class="font-bold mt-12 pb-2 border-b border-gray-700">Most Popular</h4>
 
-        <div>
+        <div class="mt-8">
           <!-- cards go here -->
         </div>
 
