change font and color.

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="./styles.css">
 </head>
-<body class="text-gray-600">
+<body class="text-gray-700 font-body">
   
   <div><!-- content wrapper -->
     <div>
@@ -37,8 +37,8 @@
 
     <main class="px-16 py-6">
       <div>
-        <a href="#">Login</a>
-        <a href="#">Sign up</a>
+        <a href="#" class="text-primary">Login</a>
+        <a href="#" class="text-primary">Sign up</a>
       </div>
 
       <header>
@@ -60,14 +60,14 @@
           </div>
         </div>
 
-        <h4 class="font-bold mt-12 pb-2 border-b border-gray-700">Most Popular</h4>
+        <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Most Popular</h4>
 
         <div class="mt-8">
           <!-- cards go here -->
         </div>
 
         <div>
-          <div>
+          <div class="bg-secondary-100 text-secondary-200">
             Load more
           </div>
         </div>
