--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
 </head>
 <body class="text-gray-700 font-mono">
   
-  <div><!-- content wrapper -->
-    <div>
+  <div class="grid md:grid-cols-3"><!-- content wrapper -->
+    <div class="md:col-span-1">
       <nav>
         <div>
           <h1 class="font-bold uppercase p-4 border-b border-gray-100">
@@ -35,10 +35,10 @@
       </nav>
     </div><!-- end nav -->
 
-    <main class="px-16 py-6 bg-gray-100">
+    <main class="px-16 py-6 bg-gray-100 col-span-2">
       <div class="flex justify-center md:justify-end">
-        <a href="#" class="text-primary">Login</a>
-        <a href="#" class="text-primary ml-2">Sign up</a>
+        <a href="#" class="text-primary btn border-primary md:border-2 ">Login</a>
+        <a href="#" class="text-primary ml-2 btn border-primary md:border-2 ">Sign up</a>
       </div>
 
       <header>
@@ -46,10 +46,10 @@
         <h3 class="text-2xl font-semibold">For Programmers!</h3>
       </header>
 
-      <div>
+      <div >
         <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Recipes</h4>
 
-        <div class="mt-8">
+        <div class="mt-8 grid lg:grid-cols-3 gap-10">
           <!-- cards go here -->
           <div class="card">
             <img src="./img/stew.jpg" alt="stew" class="w-full height-32 sm:h-48 object-cover">
@@ -90,7 +90,7 @@
         </div>
 
         <div class="flex justify-center">
-          <div class="bg-secondary-100 text-secondary-200">
+          <div class="bg-secondary-100 text-secondary-200 btn">
             Load more
           </div>
         </div>
