--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,8 @@
 
     <main class="px-16 py-6 bg-gray-100 col-span-2">
       <div class="flex justify-center md:justify-end">
-        <a href="#" class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white">Login</a>
-        <a href="#" class="text-primary ml-2 btn border-primary md:border-2 hover:bg-primary hover:text-white">Sign up</a>
+        <a href="#" class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-in-out duration-500">Login</a>
+        <a href="#" class="text-primary ml-2 btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-in-out duration-500">Sign up</a>
       </div>
 
       <header>
@@ -113,7 +113,7 @@
         </div>
 
         <div class="flex justify-center">
-          <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner">
+          <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner  transform hover:scale-125 hover:bg-opacity-50 transition ease-in-out duration-300">
             Load more
           </div>
         </div>
