--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="text-gray-600 font-mono">
   
-  <div class="md:grid md:grid-cols-3"><!-- content wrapper -->
+  <div class="md:grid md:grid-cols-5"><!-- content wrapper -->
     <div class="md:col-span-1 md:flex md:justify-end">
       <nav class="text-right">
         <div class="flex justify-between items-center">
@@ -49,7 +49,7 @@
       </nav>
     </div><!-- end nav -->
 
-    <main class="px-16 py-6 bg-gray-100 col-span-2">
+    <main class="px-16 py-6 bg-gray-100 col-span-4">
       <div class="flex justify-center md:justify-end">
         <a href="#" class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-in-out duration-500">Login</a>
         <a href="#" class="text-primary ml-2 btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-in-out duration-500">Sign up</a>
@@ -108,8 +108,50 @@
 
         <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Most Popular</h4>
 
-        <div class="mt-8">
+        <div class="my-8">
           <!-- cards go here -->
+          <div class="mt-8 grid lg:grid-cols-3 gap-10">
+            <!-- cards go here -->
+            <div class="card hover:shadow-lg">
+              <img src="./img/stew.jpg" alt="stew" class="w-full height-32 sm:h-48 object-cover">
+              <div class="m-4">
+                <span class="font-bold">5 Bean Chilli Stew</span>
+                <span class="block text-gray-500 text-sm">Recipe by Farshad</span>
+              </div>
+              <div class="badge">
+                <svg class="w-5 inline-block" data-slot="icon" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"></path>
+                </svg>
+                <span >25 mins</span>
+              </div>
+            </div>
+            <div class="card hover:shadow-lg">
+              <img src="./img/noodles.jpg" alt="noodles" class="w-full height-32 sm:h-48 object-cover">
+              <div class="m-4">
+                <span class="font-bold">Veg Noodles</span>
+                <span class="block text-gray-500 text-sm">Recipe by Farshad</span>
+              </div>
+              <div class="badge">
+                <svg class="w-5 inline-block" data-slot="icon" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"></path>
+                </svg>
+                <span >35 mins</span>
+              </div>
+            </div>
+            <div class="card hover:shadow-lg">
+              <img src="./img/curry.jpg" alt="curry" class="w-full height-32 sm:h-48 object-cover">
+              <div class="m-4">
+                <span class="font-bold">Tofu Curry</span>
+                <span class="block text-gray-500 text-sm">Recipe by Farshad</span>
+              </div>
+              <div class="badge">
+                <svg class="w-5 inline-block" data-slot="icon" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"></path>
+                </svg>
+                <span >20 mins</span>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="flex justify-center">
