--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
           </div>
         </div>
 
-        <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Most Popular</h4>
+        <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Most Popular Recipes</h4>
 
         <div class="my-8">
           <!-- cards go here -->
